# cubyc

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
cubyc/: __init__.py  cli.py  run.py  utils.py
cubyc/query/: __init__.py  query.py
cubyc/query/query_engine/: local_query_engine.py  query_engine.py
cubyc/query/query_engine/remote_query_engine/: __init__.py  bitbucket_query_engine.py  github_query_engine.py  gitlab_query_engine.py  remote_query_engine.py
cubyc/templates/: gitignore_template
